# crypt-analysis

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/crypto/: encryptor.h
src/io/: file_handler.cpp  file_handler.h
